--- a/src/Toolbelt.ApiTemplate/Dockerfile
+++ b/src/Toolbelt.ApiTemplate/Dockerfile
@@ -1,5 +1,3 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
@@ -8,6 +6,9 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["src/Toolbelt.ApiTemplate/Toolbelt.ApiTemplate.csproj", "src/Toolbelt.ApiTemplate/"]
+COPY ["src/Toolbelt.Abstractions/Toolbelt.Abstractions.csproj", "src/Toolbelt.Abstractions/"]
+COPY ["src/Toolbelt.Cosmos/Toolbelt.Cosmos.csproj", "src/Toolbelt.Cosmos/"]
+COPY ["src/Toolbelt.Shared/Toolbelt.Shared.csproj", "src/Toolbelt.Shared/"]
 RUN dotnet restore "src/Toolbelt.ApiTemplate/Toolbelt.ApiTemplate.csproj"
 COPY . .
 WORKDIR "/src/src/Toolbelt.ApiTemplate"
