--- a/src/Toolbelt.FunctionTemplate/Toolbelt.FunctionTemplate.csproj
+++ b/src/Toolbelt.FunctionTemplate/Toolbelt.FunctionTemplate.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
-        <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+        <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.0" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
@@ -20,6 +20,7 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\Toolbelt.Cosmos\Toolbelt.Cosmos.csproj" />
       <ProjectReference Include="..\Toolbelt.Shared\Toolbelt.Shared.csproj" />
     </ItemGroup>
 </Project>
